changed index.html 1 time

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welcome to homepage</h1>
     <p>This is git learing project</p>
+    <p>Hey changed for second commit</p>
 </body>
 </html>
